--- a/GW2AutoLogin/GW2AutoLogin.csproj
+++ b/GW2AutoLogin/GW2AutoLogin.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
 
   <ItemGroup>
